--- a/base-chart/templates/deployment.yaml
+++ b/base-chart/templates/deployment.yaml
@@ -19,3 +19,6 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: {{ .Values.service.port }}
+          resources:
+            requests: 
+              cpu: {{ .Values.resources.requests.cpu }}
