--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,10 @@ name: Release Helm Chart
 
 on:
   push:
-    branches:
-      - main
-#    tags:
-#      - '*-chart-*'   # Ej: base-chart-1.0.0 o app1-chart-0.2.1
+#    branches:
+#      - main
+    tags:
+      - '*-chart-*'   # Ej: base-chart-1.0.0 o app1-chart-0.2.1
 
 jobs:
   release:
