remove release creation.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,17 +33,17 @@ jobs:
           helm package ${{ steps.vars.outputs.chart }}
           ls -lh
 
-/*      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: "Release ${{ steps.vars.outputs.chart }} v${{ steps.vars.outputs.version }}"
-          #body_path: CHANGELOG.md
-          files: |
-            ${{ steps.vars.outputs.chart }}-*.tgz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-*/
+#      - name: Create GitHub Release
+#        uses: softprops/action-gh-release@v2
+#        with:
+#          tag_name: ${{ github.ref_name }}
+#          name: "Release ${{ steps.vars.outputs.chart }} v${{ steps.vars.outputs.version }}"
+#          #body_path: CHANGELOG.md
+#          files: |
+#            ${{ steps.vars.outputs.chart }}-*.tgz
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish to GitHub Pages (Helm repo)
         run: |
           git config user.name github-actions
