--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,8 @@ jobs:
 
       - name: Publish to GitHub Pages (Helm repo)
         run: |
+          pwd
+          tree
           git config user.name github-actions
           git config user.email github-actions@github.com
           git fetch origin main 
