--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
           git fetch origin main 
           git checkout main 
           mv ${{ steps.vars.outputs.chart }}-*.tgz charts/ 
-          helm repo index . --url https://$GITHUB_REPOSITORY_OWNER.github.io/helm-charts --merge index.yaml
+          helm repo index . --url https://$GITHUB_REPOSITORY_OWNER.github.io/helmcharts --merge index.yaml
           git add .
           git commit -m "Publish ${{ steps.vars.outputs.chart }} v${{ steps.vars.outputs.version }}"
           git push origin main 
