add memory request in deployment template

--- a/base-chart/templates/deployment.yaml
+++ b/base-chart/templates/deployment.yaml
@@ -22,3 +22,4 @@ spec:
           resources:
             requests: 
               cpu: {{ .Values.resources.requests.cpu }}
+              memory: {{ .Values.resources.requests.memory }}
