add limit reference to deployment

--- a/base-chart/templates/deployment.yaml
+++ b/base-chart/templates/deployment.yaml
@@ -23,3 +23,5 @@ spec:
             requests: 
               cpu: {{ .Values.resources.requests.cpu }}
               memory: {{ .Values.resources.requests.memory }}
+            limits: 
+              cpu: {{ .Values.resources.limits.cpu }}
